Bug 240003 - ktorrent crashes
Summary: ktorrent crashes
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 240157 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-29 19:33 UTC by Oleksandr Natalenko
Modified: 2010-05-31 18:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oleksandr Natalenko 2010-05-29 19:33:19 UTC
Application: ktorrent (4.0.0)
KDE Platform Version: 4.4.3 (KDE 4.4.3)
Qt Version: 4.6.2
Operating System: Linux 2.6.34-pf1 i686
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
ktorrent suddenly segfaults. It may segfault even with no main window opened. Can't be reproduced with 100% guarantee, but after several minutes it crash.

The crash can be reproduced some of the time.

 -- Backtrace:
Application: KTorrent (ktorrent), signal: Segmentation fault
[Current thread is 1 (Thread 0xb4b8e710 (LWP 1906))]

Thread 6 (Thread 0xb25ffb70 (LWP 1910)):
[KCrash Handler]
#6  QCoreApplication::notifyInternal (this=0xbff0da74, receiver=0xa7900018, event=0xb25ff080) at kernel/qcoreapplication.cpp:691
#7  0xb69db986 in QCoreApplication::sendEvent (this=0xb26466ac) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#8  QTimerInfoList::activateTimers (this=0xb26466ac) at kernel/qeventdispatcher_unix.cpp:603
#9  0xb69d8677 in timerSourceDispatch (source=0xb2646c28) at kernel/qeventdispatcher_glib.cpp:184
#10 idleTimerSourceDispatch (source=0xb2646c28) at kernel/qeventdispatcher_glib.cpp:231
#11 0xb52f12f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#12 0xb52f4fd8 in ?? () from /lib/libglib-2.0.so.0
#13 0xb52f51b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#14 0xb69d8335 in QEventDispatcherGlib::processEvents (this=0x88942d8, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#15 0xb69aaf49 in QEventLoop::processEvents (this=0xb25ff2f0, flags=) at kernel/qeventloop.cpp:149
#16 0xb69ab39a in QEventLoop::exec (this=0xb25ff2f0, flags=...) at kernel/qeventloop.cpp:201
#17 0xb68a7bd8 in QThread::exec (this=0x8832fd0) at thread/qthread.cpp:487
#18 0xb77a1bad in utp::UTPServerThread::run() () from /usr/lib/libktorrent.so.1
#19 0xb68aa93e in QThreadPrivate::start (arg=0x8832fd0) at thread/qthread_unix.cpp:248
#20 0xb53cb585 in start_thread () from /lib/i686/cmov/libpthread.so.0
#21 0xb5bea29e in clone () from /lib/i686/cmov/libc.so.6

Thread 5 (Thread 0xb1dfeb70 (LWP 1919)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5be3591 in select () from /lib/i686/cmov/libc.so.6
#2  0xb776673a in ?? () from /usr/lib/libktorrent.so.1
#3  0xb68aa93e in QThreadPrivate::start (arg=0x88438e8) at thread/qthread_unix.cpp:248
#4  0xb53cb585 in start_thread () from /lib/i686/cmov/libpthread.so.0
#5  0xb5bea29e in clone () from /lib/i686/cmov/libc.so.6

Thread 4 (Thread 0xb06ffb70 (LWP 1976)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb53cf452 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb5bf7864 in pthread_cond_timedwait () from /lib/i686/cmov/libc.so.6
#3  0xb68aa241 in thread_sleep (ti=0x1) at thread/qthread_unix.cpp:398
#4  0xb68aa383 in QThread::msleep (msecs=33) at thread/qthread_unix.cpp:424
#5  0xb76fe332 in ?? () from /usr/lib/libktorrent.so.1
#6  0xb76feca8 in ?? () from /usr/lib/libktorrent.so.1
#7  0xb68aa93e in QThreadPrivate::start (arg=0x8816850) at thread/qthread_unix.cpp:248
#8  0xb53cb585 in start_thread () from /lib/i686/cmov/libpthread.so.0
#9  0xb5bea29e in clone () from /lib/i686/cmov/libc.so.6

Thread 3 (Thread 0xafefeb70 (LWP 1977)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb53cf452 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb5bf7864 in pthread_cond_timedwait () from /lib/i686/cmov/libc.so.6
#3  0xb68aa241 in thread_sleep (ti=0x1) at thread/qthread_unix.cpp:398
#4  0xb68aa383 in QThread::msleep (msecs=42) at thread/qthread_unix.cpp:424
#5  0xb76fd882 in ?? () from /usr/lib/libktorrent.so.1
#6  0xb76feca8 in ?? () from /usr/lib/libktorrent.so.1
#7  0xb68aa93e in QThreadPrivate::start (arg=0x8816c58) at thread/qthread_unix.cpp:248
#8  0xb53cb585 in start_thread () from /lib/i686/cmov/libpthread.so.0
#9  0xb5bea29e in clone () from /lib/i686/cmov/libc.so.6

Thread 2 (Thread 0xab2feb70 (LWP 2898)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb53cf452 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb5bf7864 in pthread_cond_timedwait () from /lib/i686/cmov/libc.so.6
#3  0xb68ab7ef in QWaitConditionPrivate::wait (this=0xabb74a94, mutex=0xabb74a90, time=30000) at thread/qwaitcondition_unix.cpp:85
#4  QWaitCondition::wait (this=0xabb74a94, mutex=0xabb74a90, time=30000) at thread/qwaitcondition_unix.cpp:159
#5  0xb689fb7b in QThreadPoolThread::run (this=0xabb74360) at concurrent/qthreadpool.cpp:140
#6  0xb68aa93e in QThreadPrivate::start (arg=0xabb74360) at thread/qthread_unix.cpp:248
#7  0xb53cb585 in start_thread () from /lib/i686/cmov/libpthread.so.0
#8  0xb5bea29e in clone () from /lib/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4b8e710 (LWP 1906)):
#0  0xb4fcbdcc in poll@plt () from /usr/lib/libxcb.so.1
#1  0xb4fcc0f0 in ?? () from /usr/lib/libxcb.so.1
#2  0xb4fce761 in xcb_wait_for_reply () from /usr/lib/libxcb.so.1
#3  0xb54d17a6 in _XReply () from /usr/lib/libX11.so.6
#4  0xb54c6cd1 in XTranslateCoordinates () from /usr/lib/libX11.so.6
#5  0xb5f9f706 in QWidget::mapFromGlobal (this=0xb265c530, pos=...) at kernel/qwidget_x11.cpp:1325
#6  0xb5f9f75c in QWidget::mapFromGlobal (this=0xb265b5e0, pos=...) at kernel/qwidget_x11.cpp:1318
#7  0xb5f9f75c in QWidget::mapFromGlobal (this=0xb2661d40, pos=...) at kernel/qwidget_x11.cpp:1318
#8  0xb5f9f75c in QWidget::mapFromGlobal (this=0xb2670240, pos=...) at kernel/qwidget_x11.cpp:1318
#9  0xb5f9f75c in QWidget::mapFromGlobal (this=0xb26c4240, pos=...) at kernel/qwidget_x11.cpp:1318
#10 0xb5f9f75c in QWidget::mapFromGlobal (this=0xad8b7810, pos=...) at kernel/qwidget_x11.cpp:1318
#11 0xb5ef8b65 in QApplicationPrivate::pickMouseReceiver (candidate=0xb265c530, globalPos=..., pos=..., type=QEvent::MouseMove, buttons=..., buttonDown=0x0, alienWidget=0xad8b7810)
    at kernel/qapplication.cpp:2892
#12 0xb5f84fea in QETWidget::translateMouseEvent (this=0xb265c530, event=0xbff0d6f0) at kernel/qapplication_x11.cpp:4358
#13 0xb5f845ab in QApplication::x11ProcessEvent (this=0xbff0da74, event=0xbff0d6f0) at kernel/qapplication_x11.cpp:3379
#14 0xb5fb26f2 in x11EventSourceDispatch (s=0x8847de8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#15 0xb52f12f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#16 0xb52f4fd8 in ?? () from /lib/libglib-2.0.so.0
#17 0xb52f51b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#18 0xb69d8335 in QEventDispatcherGlib::processEvents (this=0x8815650, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#19 0xb5fb2255 in QGuiEventDispatcherGlib::processEvents (this=0x8815650, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#20 0xb69aaf49 in QEventLoop::processEvents (this=0xbff0d9e4, flags=) at kernel/qeventloop.cpp:149
#21 0xb69ab39a in QEventLoop::exec (this=0xbff0d9e4, flags=...) at kernel/qeventloop.cpp:201
#22 0xb69af52f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#23 0xb5ef3c87 in QApplication::exec () at kernel/qapplication.cpp:3579
#24 0x08069121 in _start ()

Possible duplicates by query: bug 239065, bug 238956, bug 238647, bug 238646, bug 238323.

Reported using DrKonqi
Comment 1 Oleksandr Natalenko 2010-05-29 20:19:15 UTC
Seems to occur only if uTP protocol is enabled.
Comment 2 Joris Guisson 2010-05-31 18:02:44 UTC
SVN commit 1132867 by guisson:

Fix crashes caused by ServerInterface::newConnection being called in µTP thread 

BUG: 240003
BUG: 239944

 M  +1 -0      ChangeLog  
 M  +40 -3     src/utp/utpserver.cpp  
 M  +35 -0     src/utp/utpserver.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132867
Comment 3 Joris Guisson 2010-05-31 18:15:31 UTC
*** Bug 240157 has been marked as a duplicate of this bug. ***