Fix crashes caused by ServerInterface::newConnection being called in µTP thread

BUG: 240003
BUG: 239944

svn path=/trunk/extragear/network/libktorrent/; revision=1132867